<resources>
    <string name="app_name">MyShopping</string>
    <string name="title_home">首页</string>
    <string name="title_type">分类</string>
    <string name="title_shoppingcart">购物车</string>
    <string name="title_user">个人中心</string>

    <string name="action_share">分享</string>
    <string name="action_settings">设置</string>


    <string name="shareText">悟空和唐僧一起上某卫视非诚勿扰,悟空上台,24盏灯全灭。
        理由:1.没房没车只有一根破棍. 2.保镖职业危险.3.动不动打妖精,对女生不温柔.
        4.坐过牢,曾被压五指山下500年。唐僧上台，哗!灯全亮。 理由:1.公务员； 2.皇上兄弟，后台最硬
        3.精通梵文等外语 4.长得帅 5.最关键一点：有宝马！</string>

    <string name="hello">Hello World, JPush!</string>
    <!--<string name="app_name">JPush SDK Demo</string>-->
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="mobilenumber_hint">手机号只能以“+”或数字开头第二位开始只能包含“-”和数字</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="mobilenumber_empty_guide">手机号为空将清除之前设置的手机号</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="user_name">用户名</string>
    <string name="passworld">密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="log_in">登  录</string>
    <string name="title_mes">通知消息</string>
    <string name="current_date">2018.8.12</string>
    <string name="mes_content">今天会下雨，大家请记得带伞。。。。</string>
    <string name="emptyMes">空空如也！！！</string>


</resources>
