<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/focus_hider"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:src="@drawable/log"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_input_layout"
        style="@style/TextInputLayout"
        android:layout_marginTop="@dimen/dp_50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/focus_hider">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/username_input_edit"
            style="@style/TextEdit"
            android:hint="@string/user_name"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passworld_input_layout"
        style="@style/TextInputLayout"
        android:layout_marginTop="@dimen/dp_15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_input_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passworld_input_edit"
            style="@style/TextEdit"
            android:hint="@string/passworld"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40dp"
        android:gravity="center"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passworld_input_layout" />

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp_50dp"
        app:layout_constraintTop_toBottomOf="@+id/forget_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_40dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/first"
            android:layout_width="@dimen/dp_50dp"
            android:layout_height="@dimen/dp_50dp"
            android:src="@drawable/facebook" />

        <ImageView
            android:id="@+id/second"
            android:layout_width="@dimen/dp_50dp"
            android:layout_height="@dimen/dp_50dp"
            android:layout_marginLeft="@dimen/dp_30dp"
            android:layout_marginRight="@dimen/dp_30dp"
            android:src="@drawable/linkedin" />

        <ImageView
            android:id="@+id/last"
            android:layout_width="@dimen/dp_50dp"
            android:layout_height="@dimen/dp_50dp"
            android:src="@drawable/twitter" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>